--- a/Labirinto/Labirinto.cbp
+++ b/Labirinto/Labirinto.cbp
@@ -32,6 +32,8 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="Aresta.cpp" />
+		<Unit filename="Aresta.h" />
 		<Unit filename="Matriz.cpp" />
 		<Unit filename="Matriz.h" />
 		<Unit filename="No.cpp" />
